--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,9 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true,
-    "outDir": "dist"
+    "resolveJsonModule": true,
+    "outDir": "dist",
+    "incremental": true
   },
   "include": ["src"],
   "exclude": ["node_modules"]
